# buildwise

./: .gitignore  README.md  package-lock.json
backend/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/src/api/: main.py  test.py
backend/src/backend/: main.py  test.py
workflow/: .dockerignore  Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
workflow/src/: App.tsx  index.css
workflow/src/components/: App.jsx  CircleNode.tsx  CustomEdge.tsx  CustomNode.tsx  Display.jsx  ExistingProject.tsx  Header.tsx  HomePage.tsx  NewProjectPage.tsx  RectangleNode.tsx  RhombusNode.tsx  ScanProjectPage.tsx  ScanPrompt.tsx  SendPromp.tsx  SignIn.tsx  Test.tsx  buttonedge.css  graph.js
workflow/src/components/Header/: Header.tsx
workflow/src/components/HomePage/: HomePage.tsx
workflow/src/components/SignIn/: SignIn.tsx
workflow/src/components/Test/: Test.tsx
workflow/src/data/: global-state.tsx  nodes-edges-arch.js  nodes-edges-basic.js
workflow/src/routes/: AppRoutes.tsx
