[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mitchell_kimbell",email = "mfkimbell@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.0.post1",
    "dotenv>=0.0.5",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    
    "edgedb>=1.8.0",
    "numpy>=1.26.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
